Fix visibility of play button's drop shadow for themes with light background

--- a/src/less/partials/_overlays.less
+++ b/src/less/partials/_overlays.less
@@ -45,7 +45,7 @@
       }
 
       svg {
-        filter: drop-shadow(0px 0px 5px var(--term-color-background));
+        filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.4));
       }
     }
   }
